# platekeeper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  compose.prod.yml  compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-api.yml  deploy-showcase.yml  deploy-web.yml
apps/mobile/: .env.example  .gitignore  AGENTS.md  App.tsx  CLAUDE.md  app.json  eas.json  metro.config.js  package.json
apps/showcase/: Dockerfile  eslint.config.js  (+5 more)
docs/: IDEAS.md  PLAN.md  TODO.md  allergies.md  background-import.md  bug-report-plan.md  code-improvements.md  email-verification-invitations.md  google-auth.md  household.md  i18n.md  r2-image-storage.md  react-native-migration.md  shopping-list.md  testflight-plan.md
services/api/: .env.example  Dockerfile  capture_showcase_snapshot.py  pyproject.toml
services/api/scripts/: backfill_shopping_list_values.py  backfill_unit_variants.py  reimport_recipes.py
services/api/src/api/: broadcaster.py  config.py  constants.py  database.py  main.py  models.py  showcase.py  showcase_fixture.json  users.py  worker.py
services/api/src/api/routes/: allergens.py  auth.py  context.py  google_auth.py  households.py  images.py  imports.py  meal_plan.py  preferences.py  proxy.py  recipes.py  shopping_list.py  signup.py  tags.py
services/api/src/api/services/: apns.py  cache.py  email.py  gemini.py  import_worker.py  invitations.py  monitoring.py  pipeline.py  r2.py  scraper.py  transcription.py
services/api/tests/: test_gemini_extraction.py  test_recipe_sharing.py
(+273 files in other folders)
