[project]
name = "platekeeper-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi-users[sqlalchemy]>=13.0",
    "asyncpg>=0.29",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "reportlab>=4.0",
    "h2>=4.0",
    "boto3>=1.34",
    "pillow>=10.0",
    "pillow-heif>=0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]
